[package]
name = "controlify-rs-fltk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
fltk-theme = "*"
tokio-tungstenite = "*"


[build-dependencies]
fl2rust = "0.4"